# train_ml_on_spark

./: .gitignore  Dockerfile  README.md  docker-compose.yml
dl_library/: CMakeLists.txt  README.md  setup.py
dl_library/csrc/: bindings.cpp  tensor.cpp  tensor.h
dl_library/examples/: train_bank_marketing.py
dl_library/torch_lite/: __init__.py  data.py  nn.py  optim.py  tensor.py
notebooks/: Untitled.ipynb  bank_marketing_xgboost.ipynb  cat_features.txt  config.yaml  num_features.txt  pipeline_utils.py  test_xgb.ipynb  xgboost_pyspark_binary_cls.ipynb  xgboost_pyspark_preprocessing_pipeline.ipynb  xgboost_pyspark_s3_distributed.ipynb
